--- a/index.html
+++ b/index.html
@@ -76,6 +76,132 @@
   transition: background 1s ease;
 }
 
+* {
+  box-sizing: border-box;
+  font-family: 'Segoe UI', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background: linear-gradient(to right, #1e3c72, #2a5298);
+  color: white;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  transition: background 1s ease; /* Smooth background transition */
+}
+
+.weather-app {
+  background: rgba(255, 255, 255, 0.1);
+  padding: 2rem;
+  border-radius: 20px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  width: 100%;
+  max-width: 400px;
+  backdrop-filter: blur(10px);
+  transition: transform 0.3s ease;
+}
+
+.weather-app:hover {
+  transform: translateY(-5px); /* Subtle hover effect */
+}
+
+.weather-app h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.search-box input {
+  width: 80%;
+  padding: 0.7rem;
+  border: none;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+  font-size: 1rem;
+  outline: none;
+  transition: box-shadow 0.3s ease;
+}
+
+.search-box input:focus {
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
+}
+
+.weather-icon {
+  width: 100px;
+  margin: 1rem auto;
+  transition: transform 0.5s ease;
+}
+
+.weather-icon:hover {
+  transform: scale(1.1); /* Small zoom on hover */
+}
+
+.weather-details {
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  line-height: 1.6;
+}
+
+.error {
+  color: #ff8080;
+  margin-top: 1rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+  .weather-app {
+    max-width: 90%;
+    padding: 1.5rem;
+  }
+
+  .weather-app h1 {
+    font-size: 1.8rem;
+  }
+
+  .search-box input {
+    width: 90%;
+    font-size: 0.95rem;
+  }
+
+  .weather-details {
+    font-size: 1.1rem;
+  }
+
+  .weather-icon {
+    width: 80px;
+  }
+}
+
+@media (max-width: 480px) {
+  .weather-app {
+    padding: 1rem;
+  }
+
+  .weather-app h1 {
+    font-size: 1.5rem;
+  }
+
+  .search-box input {
+    width: 100%;
+    font-size: 0.9rem;
+    padding: 0.5rem;
+  }
+
+  .weather-details {
+    font-size: 1rem;
+  }
+
+  .weather-icon {
+    width: 70px;
+  }
+}
+
   </style>
 </head>
 <body>
