--- a/index.html
+++ b/index.html
@@ -202,6 +202,34 @@ body {
   }
 }
 
+/* Toggle button */
+#themeToggle {
+  background: rgba(255, 255, 255, 0.2);
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  color: white;
+  cursor: pointer;
+  margin-bottom: 1rem;
+  transition: 0.3s;
+}
+
+#themeToggle:hover {
+  background: rgba(255, 255, 255, 0.4);
+}
+
+/* Light mode */
+.light-mode {
+  background: linear-gradient(to right, #f5f7fa, #c3cfe2);
+  color: black;
+}
+
+.light-mode .weather-app {
+  background: rgba(0, 0, 0, 0.1);
+  color: black;
+}
+
+
   </style>
 </head>
 <body>
@@ -212,6 +240,9 @@ body {
     </div>
     <div id="weatherInfo"></div>
     <div class="error" id="errorMsg"></div>
+
+    <button id="themeToggle">🌙 Dark Mode</button>
+
   </div>
 
   <script>
@@ -276,6 +307,29 @@ body {
     body.style.background = "linear-gradient(to right, #ff416c, #ff4b2b)"; // hot
   }
 }
+
+// Theme Toggle
+const themeToggle = document.getElementById("themeToggle");
+const body = document.body;
+
+// Load saved theme
+if (localStorage.getItem("theme") === "light") {
+  body.classList.add("light-mode");
+  themeToggle.textContent = "🌙 Dark Mode";
+}
+
+themeToggle.addEventListener("click", () => {
+  body.classList.toggle("light-mode");
+
+  if (body.classList.contains("light-mode")) {
+    themeToggle.textContent = "🌙 Dark Mode";
+    localStorage.setItem("theme", "light");
+  } else {
+    themeToggle.textContent = "☀️ Light Mode";
+    localStorage.setItem("theme", "dark");
+  }
+});
+
 
   </script>
 </body>
